[project]
name = "yatt"
version = "0.1.0"
description = ""
authors = [{ name = "KuleminR", email = "romankulemin07@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi[standard] (>=0.128.7,<0.129.0)",
  "alembic (>=1.18.4,<2.0.0)",
  "sqlalchemy (>=2.0.46,<3.0.0)",
  "pydantic (>=2.12.5,<3.0.0)",
  "pwdlib[argon2] (>=0.3.0,<0.4.0)",
  "asyncpg (>=0.31.0,<0.32.0)",
]

[dependency-groups]
test = [
  "pytest (>=9.0.2,<10.0.0)",
  "httpx (>=0.28.1,<0.29.0)",
  "aiosqlite (>=0.22.1,<0.23.0)",
]

[tool.poetry.group.test]
optional = true

[tool.poetry]
packages = [{ include = "yatt", from = "src" }]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["src"]
